# Airport

./: .gitignore  README.md
proyectoFinal/binary/resources/models/sceneParts/: farola.mtl
proyectoFinal/binary/resources/shaders/: fshader.glsl  fshader_cartoon.glsl
proyectoFinal/src/: Model.cpp  Model.h  Texture.h  main.cpp
sesion7/: CMakeLists.txt
sesion7/binary/resources/shaders/: fshader.glsl  fshader_discard.glsl  fshader_procedural.glsl
sesion7/src/: Shaders.cpp  Shaders.h  main.cpp
